Migrate to Java 18. Enable preview mode.